Code giao diện tiếp theo của nhà tuyển dụng
Các task được yêu cầu ở trello của nhom01

--- a/DO AN/account_authentication_recruit.html
+++ b/DO AN/account_authentication_recruit.html
@@ -20,11 +20,8 @@
             <a href="#" id="find_job">Tìm việc làm</a>
             <a href="#" id="list_company">Danh sách công ty</a>
             <a href="#" id="blog">Blog</a>
-            <button id="btn_login">Đăng nhập</button>
-            <button id="btn_signin">Đăng ký</button>
-            <button id="btn_switch_recruiter">Dành cho nhà tuyển dụng
-                <img src="./style/image/right_arrow.svg" id="ic_right_arrow" alt="go">
-            </button>
+            <button id="btn_login"><a id="btn_login_recruit" href="#">Đăng nhập</a></button>
+            <button id="btn_signin"><a id="btn_signin_recruit" href="#">Đăng ký</a></button>
         </nav>
 
         <div id="rectangle_mid_account_authe">
