--- a/DO AN/forget_password_recruit.html
+++ b/DO AN/forget_password_recruit.html
@@ -20,26 +20,23 @@
             <a href="#" id="find_job">Tìm việc làm</a>
             <a href="#" id="list_company">Danh sách công ty</a>
             <a href="#" id="blog">Blog</a>
-            <button id="btn_login">Đăng nhập</button>
-            <button id="btn_signin">Đăng ký</button>
-            <button id="btn_switch_recruiter">Dành cho nhà tuyển dụng
-                <img src="./style/image/right_arrow.svg" id="ic_right_arrow" alt="go">
-            </button>
+            <button id="btn_login"><a id="btn_login_recruit" href="#">Đăng nhập</a></button>
+            <button id="btn_signin"><a id="btn_signin_recruit" href="#">Đăng ký</a></button>
         </nav>
-
-        <div id="rectangle_mid_account_authe">
-            <div id="rectangle_form_account_authe">
-                <div id="text_account_authe">Xác thực tài khoản</div>
-                <div id="text_please_fill_code_confirm">Vui lòng kiểm tra email của bạn để lấy mã xác nhận </div>
+        <div id="rectangle_mid_forget_password">
+            <div id="rectangle_form_reset_password">
+                <div id="text_setup_password">Đặt lại mật khẩu của bạn</div>
+                <div id="text_please_fill">Vui lòng nhập đia chỉ email để khôi phục tài khoản của bạn</div>
                 <form action="">
-                    <div id="label_code_confirm">Mã xác nhận</div>
-                    <input type="text" name="code_confirm_account" id="code_confirm_account"  required placeholder="Nhập mã xác nhận">
-                    <button type="submit" id="submit_account_authe">Xác nhận</button>
+                    <div id="label_email_forget_password">Email</div>
+                    <input type="email" name="email_signin" id="email_forget_password"  required placeholder="Nhập email của bạn">
+                    <img src="./style/image/logo_email.svg" id="logo_email_forget_password" alt="logo_email_forget_password">
+                    <button type="submit" id="submit_forget_password">Gửi</button>
                 </form>
                
             </div>
-            <div id="rectangle_image_account_authe">
-                <img src="./style/image/side_account_authe.svg" id="side_account_authe" alt="side_account_authe">
+            <div id="rectangle_image_forget_password">
+                <img src="./style/image/side_forget_password.svg" id="side_forget_password" alt="side_forget_password">
 
             </div>
         </div>
