--- a/DO AN/login_recruit.html
+++ b/DO AN/login_recruit.html
@@ -20,11 +20,8 @@
             <a href="#" id="find_job">Tìm việc làm</a>
             <a href="#" id="list_company">Danh sách công ty</a>
             <a href="#" id="blog">Blog</a>
-            <button id="btn_login">Đăng nhập</button>
-            <button id="btn_signin">Đăng ký</button>
-            <button id="btn_switch_recruiter">Dành cho nhà tuyển dụng
-                <img src="./style/image/right_arrow.svg" id="ic_right_arrow" alt="go">
-            </button>
+            <button id="btn_login"><a id="btn_login_recruit" href="#">Đăng nhập</a></button>
+            <button id="btn_signin"><a id="btn_signin_recruit" href="#">Đăng ký</a></button>
         </nav>
 
         <div id="rectangle_mid_login">
@@ -33,10 +30,10 @@
                 <img src="./style/image/text_login_by_account.svg" id="text_login_by_account" alt="text_login_by_account">
                 <form action="">
                     <div id="label_email">Email</div>
-                    <input type="email" name="email_login" id="email_login"  required placeholder="Nhập email của bạn">
+                    <input type="email" name="email_login_recuit" id="email_login"  required placeholder="Nhập email của bạn">
                     <img src="./style/image/logo_email.svg" id="logo_email" alt="logo_email">
                     <div id="label_password">Mật khẩu</div>
-                    <input type="password" name="password_login" id="password_login"  required placeholder="Nhập mật khẩu">
+                    <input type="password" name="password_login_recruit" id="password_login"  required placeholder="Nhập mật khẩu">
                     <img src="./style/image/logo_password.svg" id="logo_password" alt="logo_password">
                     <img src="./style/image/eye-slash.svg" id="eye_slash_password" alt="eye_slash_password">
                     <button type="submit" id="submit_form_login">Đăng nhập</button>
